fixed display layouts to work on mobile phones

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -3896,10 +3896,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-toggle {
   position: relative;
-  float: right;
   padding: 9px 10px;
   margin-top: 8px;
-  margin-right: 15px;
+  margin-left: 100px;
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
